--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,7 +13,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_fav"
-        android:icon="@drawable/ic_tv"
+        android:icon="@drawable/ic_favorite"
         android:title="@string/fav"
         app:showAsAction="ifRoom" />
 </menu>
