--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,63 +7,68 @@
     tools:context=".DetailActivity">
 
     <TextView
-        android:id="@+id/txt_release"
-        android:layout_width="wrap_content"
+        android:id="@+id/txt_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/relase_reminder"
-        android:textSize="24sp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center"
+        android:text="@string/title"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txt_release_detail"
+    <ImageView
+        android:id="@+id/img_poster"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/reminder_showing_move_that_released_today"
-        app:layout_constraintStart_toStartOf="@+id/txt_release"
-        app:layout_constraintTop_toBottomOf="@+id/txt_release" />
+        android:contentDescription="@string/poster"
+        android:src="@drawable/nologo"
+        app:layout_constraintEnd_toEndOf="@+id/txt_title"
+        app:layout_constraintStart_toStartOf="@+id/txt_title"
+        app:layout_constraintTop_toBottomOf="@+id/txt_title" />
 
     <TextView
-        android:id="@+id/txt_daily"
-        android:layout_width="wrap_content"
+        android:id="@+id/txt_rate"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/daily_reminder"
-        android:textSize="24sp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/rate"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_release_detail" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_date" />
 
     <TextView
-        android:id="@+id/txt_daily_detail"
-        android:layout_width="wrap_content"
+        android:id="@+id/txt_date"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/reminder_for_return_to_app"
+        android:layout_marginEnd="16dp"
+        android:text="@string/date"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_daily" />
+        app:layout_constraintTop_toBottomOf="@+id/img_poster" />
 
-    <Switch
-        android:id="@+id/sw_release"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_release"
+    <TextView
+        android:id="@+id/txt_descs"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/deskripsi"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txt_release" />
-
-    <Switch
-        android:id="@+id/sw_daily"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_daily"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txt_daily" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_rate" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
