--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#26C6DA</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorGray">#CC5A5353</color>
+    <color name="colorWhite">#80FFFFFF</color>
+    <color name="colorTrans">#00FFFFFF</color>
 </resources>
