--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -12,4 +12,9 @@
         android:icon="@drawable/ic_settings"
         android:title="@string/setting"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_language"
+        android:icon="@drawable/ic_language"
+        android:title="@string/language"
+        app:showAsAction="ifRoom" />
 </menu>
